--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <header class="header page__header">
       <img class="header__logo" src="./images/logo/logo-mesto.svg" alt="Логотип 'Место Раша'">
     </header>
-    <div class="popup popup_opened">
+    <div class="popup">
       <div class="popup__container">
+        <div class="popup__close"></div>
         <h3 class="popup__title">
           Редактировать профиль
         </h3>
@@ -28,7 +29,7 @@
     </div>
     <main class="content">
       <section class="profile content__profile">
-        <img class="profile__avatar" src="./images/element/taganrog-park-gorkogo.jpg" alt="Фотография профиля">
+        <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Фотография профиля">
         <div class="profile__info">
           <div class="profile__flex-row">
             <h1 class="profile__name">
