feat: Написать js для кнопок и попапа

--- a/index.html
+++ b/index.html
@@ -32,16 +32,10 @@
         <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Фотография профиля">
         <div class="profile__info">
           <div class="profile__flex-row">
-            <h1 class="profile__name">
-              Жак-Ив Кусто
-            </h1>
-            <div class="profile__edit-button">
-
-            </div>
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <div class="profile__edit-button"></div>
           </div>
-          <p class="profile__description">
-            Исследователь океана
-          </p>
+          <p class="profile__description">Исследователь океана</p>
         </div>
         <div class="profile__add-button">
 
@@ -122,5 +116,7 @@
       </p>
     </footer>
   </div>
+  <script src="script.js"></script>
 </body>
+
 </html>
