добавить placeholder полям ввода

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h3 class="popup__title">
           Редактировать профиль
         </h3>
-        <input class="popup__edit-name">
-        <input class="popup__edit-description">
+        <input class="popup__edit-name" placeholder="Имя">
+        <input class="popup__edit-description" placeholder="О себе">
         <button class="popup__save-button">
           Сохранить
         </button>
