--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </section>
       <section class="elements">
         <article class="element">
-          <img class="element__image" src="./images/element/taganrog-hotel.jpg" alt="Название места">
-          <div class="element__description">
+          <img class="element__image" src="./images/element/taganrog-hotel.jpg" alt='Гостиница "Таганрог"'>
+          <div class="element__description" title='Гостиница "Таганрог"'>
             <h2 class="element__title">
               Гостиница "Таганрог"
             </h2>
@@ -54,9 +54,9 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/element/taganrog-licey-chehova.jpg" alt="Название места">
+          <img class="element__image" src="./images/element/taganrog-licey-chehova.jpg" alt="Лицей имени А.П.Чехова">
           <div class="element__description">
-            <h2 class="element__title">
+            <h2 class="element__title" title="Лицей имени А.П.Чехова">
               Лицей имени А.П.Чехова
             </h2>
             <div class="element__like">
@@ -65,9 +65,9 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/element/taganrog-tum.jpg" alt="Название места">
+          <img class="element__image" src="./images/element/taganrog-tum.jpg" alt="Таганрогский универмаг">
           <div class="element__description">
-            <h2 class="element__title">
+            <h2 class="element__title" title="Таганрогский универмаг">
               Таганрогский универмаг
             </h2>
             <div class="element__like">
@@ -76,9 +76,9 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/element/taganrog-cinema-unost.jpg" alt="Название места">
+          <img class="element__image" src="./images/element/taganrog-cinema-unost.jpg" alt='"Кинотеатр "Юность"'>
           <div class="element__description">
-            <h2 class="element__title">
+            <h2 class="element__title" title='"Кинотеатр "Юность"'>
               Кинотеатр "Юность"
             </h2>
             <div class="element__like">
@@ -87,7 +87,7 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/element/taganrog-park-gorkogo.jpg" alt="Название места">
+          <img class="element__image" src="./images/element/taganrog-park-gorkogo.jpg" alt="Парк имени М.Горького">
           <div class="element__description">
             <h2 class="element__title" title="Парк имени М.Горького">
               Парк имени М.Горького
@@ -98,9 +98,9 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/element/taganrog-balka-smerti.jpg" alt="Название места">
+          <img class="element__image" src="./images/element/taganrog-balka-smerti.jpg" alt="Балка смерти">
           <div class="element__description">
-            <h2 class="element__title">
+            <h2 class="element__title" title="Балка смерти">
               Балка смерти
             </h2>
             <div class="element__like">
