feat: Добавить функционал пользовательского добавления карточек с возможностью просмотра и уаления карточек. Done

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           Новое место
         </h2>
         <input class="popup__edit-name page-input" type="text" name="place-name" placeholder="Название">
-        <input class="popup__edit-description page-input" type="text" name="link-image" placeholder="Ссылка на картинку">
+        <input class="popup__edit-description page-input" type="text" name="link-image"
+          placeholder="Ссылка на картинку">
         <button class="popup__save-button page-hover" type="submit">
           Создать
         </button>
