fix: указать alt для заполняемых элементов

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="viewer">
         <figure class="viewer__container">
           <button class="popup__close page-hover" type="reset"></button>
-          <img class="viewer__image" src="#" alt="">
+          <img class="viewer__image" src="#" alt="#">
           <figcaption class="viewer__title"></figcaption>
         </figure>
       </div>
@@ -82,7 +82,7 @@
 
   <template id="element-template">
     <article class="element">
-      <img class="element__image" src="#" alt="">
+      <img class="element__image" src="#" alt="#">
       <div class="element__description">
         <h2 class="element__title" title="">
         </h2>
