--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
       <button class="element__trash page-hover" type="button"></button>
     </article>
   </template>
+
+  <script src="./scripts/initialCards.js"></script>
   <script src="./scripts/script.js"></script>
+  <script src="./scripts/validate.js"></script>
 </body>
 
 </html>
