--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         <h2 class="popup__title">
           Редактировать профиль
         </h2>
-        <input class="popup__edit-name page-input" type="text" name="fistname" placeholder="Имя">
-        <input class="popup__edit-description page-input" type="text" name="about" placeholder="О себе">
+        <input class="popup__edit-name page-input" type="text" name="fistname" id="fistname" placeholder="Имя">
+        <span class="popup__input-error fistname-error">Ошибка ввода</span>
+        <input class="popup__edit-description page-input" type="text" name="about" id="about" placeholder="О себе">
+        <span class="popup__input-error about-error">Ошибка ввода</span>
         <button class="popup__save-button page-hover" type="submit">
           Сохранить
         </button>
@@ -60,10 +62,11 @@
         <h2 class="popup__title">
           Новое место
         </h2>
-        <input class="popup__edit-name page-input" type="text" name="place-name" placeholder="Название">
-        <input class="popup__edit-description page-input" type="text" name="link-image"
-          placeholder="Ссылка на картинку">
-        <button class="popup__save-button page-hover" type="submit">
+        <input class="popup__edit-name page-input_error page-input" type="text" name="place-name" id="place-name" placeholder="Название">
+        <span class="popup__input-error place-name-error">Ошибка ввода</span>
+        <input class="popup__edit-description page-input" type="text" name="link-image" id="link-image" placeholder="Ссылка на картинку">
+        <span class="popup__input-error link-image-error">Ошибка ввода</span>
+        <button class="popup__save-button popup__save-button_inactive page-hover" type="submit">
           Создать
         </button>
       </form>
