fix: мелкие правки по чек-листу

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           Редактировать профиль
         </h2>
         <label class="form__field">
-          <input class="form__input popup__edit-name" type="text" name="firstname" id="firstname" placeholder="Имя" minlength="2" maxlength="40" required>
-          <span class="form__tip firstname-error">Ошибка ввода</span>
+          <input class="form__input popup__edit-name" type="text" name="firstname" placeholder="Имя" minlength="2" maxlength="40" required>
+          <span class="form__tip firstname-error"></span>
         </label>
         <label class="form__field">
-          <input class="form__input popup__edit-description" type="text" name="about" id="about" placeholder="О себе" minlength="2" maxlength="200" required>
-          <span class="form__tip about-error">Ошибка ввода</span>
+          <input class="form__input popup__edit-description" type="text" name="about" placeholder="О себе" minlength="2" maxlength="200" required>
+          <span class="form__tip about-error"></span>
         </label>
         <button class="form__button-submit popup__save-button page-hover" type="submit">
           Сохранить
@@ -67,12 +67,12 @@
           Новое место
         </h2>
         <label class="form__field">
-          <input class="form__input popup__edit-name" type="text" name="place-name" id="place-name" placeholder="Название" minlength="2" maxlength="30" required>
-          <span class="form__tip place-name-error">Ошибка ввода</span>
+          <input class="form__input popup__edit-name" type="text" name="place-name" placeholder="Название" minlength="2" maxlength="30" required>
+          <span class="form__tip place-name-error"></span>
         </label>
         <label class="form__field">
-          <input class="form__input popup__edit-description" type="url" name="link-image" id="link-image" placeholder="Ссылка на картинку" required>
-          <span class="form__tip link-image-error">Ошибка ввода</span>
+          <input class="form__input popup__edit-description" type="url" name="link-image" placeholder="Ссылка на картинку" required>
+          <span class="form__tip link-image-error"></span>
         </label>
         <button class="form__button-submit popup__save-button page-hover" type="submit">
           Создать
