--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
   </div>
 
-  <template class="element-template" id="element-template"> <!-- todo убрать id -->
+  <template id="element-template">
     <article class="element">
       <img class="element__image" src="#" alt="#">
       <div class="element__description">
@@ -104,8 +104,9 @@
   </template>
 
   <script src="./scripts/initialCards.js"></script>
-  <script src="./scripts/card.js"></script>
+  <script src="./scripts/Card.js"></script>
   <script src="./scripts/script.js"></script>
+  <script src="./scripts/FormValidator.js"></script>
   <script src="./scripts/validate.js"></script>
 </body>
 
