--- a/index.html
+++ b/index.html
@@ -103,11 +103,7 @@
     </article>
   </template>
 
-  <script src="./scripts/initialCards.js"></script>
-  <script src="./scripts/Card.js"></script>
-  <script src="./scripts/script.js"></script>
-  <script src="./scripts/FormValidator.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/script.js"></script>
 </body>
 
 </html>
