feat: настроить сборку webpack - V

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./images/favicon.svg" rel="icon" type="image/svg+xml">
-  <link rel="stylesheet" href="./pages/index.css">
+  <link href=<%=require("./images/favicon.svg")%> rel="icon" type="image/svg+xml">
   <title>Место</title>
 </head>
 
 <body class="body">
   <div class="page">
     <header class="header page__header">
-      <img class="header__logo" src="./images/logo/logo-mesto.svg" alt="Логотип 'Место Раша'">
+      <img class="header__logo" src=<%=require("./images/logo/logo-mesto.svg")%> alt="Логотип 'Место Раша'">
     </header>
     <main class="content">
 
       <section class="profile content__profile">
-        <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Фотография профиля">
+        <img class="profile__avatar" src=<%=require("./images/profile/avatar.jpg")%>  alt="Фотография профиля">
         <div class="profile__info">
           <div class="profile__flex-row">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
