fix: сделать правки по змечаниям ревью

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     </footer>
 
     <div class="popup">
-      <form class="form popup__container" name="edit-profile" novalidate>
+      <form class="form form_edit-profile popup__container" name="edit-profile" novalidate>
         <button class="form__reset popup__close page-hover" type="reset"></button>
         <h2 class="form__title popup__title">
           Редактировать профиль
@@ -60,7 +60,7 @@
     </div>
 
     <div class="popup">
-      <form class="form popup__container" name="add-card" novalidate>
+      <form class="form form_add-card popup__container" name="add-card" novalidate>
         <button class="form__reset popup__close page-hover" type="reset"></button>
         <h2 class="form__title popup__title">
           Новое место
