fix: селектор форм зменить на селектор popup

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
       </p>
     </footer>
 
-    <div class="popup">
-      <form class="form form_edit-profile popup__container" name="edit-profile" novalidate>
+    <div class="popup popup_edit-profile">
+      <form class="form popup__container" name="edit-profile" novalidate>
         <button class="form__reset popup__close page-hover" type="reset"></button>
         <h2 class="form__title popup__title">
           Редактировать профиль
@@ -59,8 +59,8 @@
       </form>
     </div>
 
-    <div class="popup">
-      <form class="form form_add-card popup__container" name="add-card" novalidate>
+    <div class="popup popup_add-card">
+      <form class="form popup__container" name="add-card" novalidate>
         <button class="form__reset popup__close page-hover" type="reset"></button>
         <h2 class="form__title popup__title">
           Новое место
@@ -79,7 +79,7 @@
       </form>
     </div>
 
-    <div class="popup">
+    <div class="popup popup_viewer">
       <div class="viewer">
         <figure class="viewer__container">
           <button class="popup__close page-hover" type="reset"></button>
